--- a/Documentor/Properties/launchSettings.json
+++ b/Documentor/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Documentor": {
-      "commandName": "Project",
-      "commandLineArgs": "--repository XeniumCRM --owner xenium-partners --token 279dc0627d9c126010c99f716286687e0b80ccb1 --doctype spec"
+      "commandName": "Project"
     }
   }
 }
